--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -2,7 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+}
 
 .pageContainer {
-    @apply max-w-7xl bg-gray-50 flex flex-grow;
+    @apply max-w-7xl bg-white flex flex-grow;
   }  
+
+ @layer utilities {
+    .animation-delay-2000 {
+      animation-delay: 2s;
+    }
+    .animation-delay-4000 {
+      animation-delay: 4s;
+    }
+  }
+  
