--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -3,8 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1rem;
+   @apply font-sans;
 }
 
 .pageContainer {
